force-app/main/default/objects/job_posting_site__c/job_posting_site__c.object-meta.xml
<CustomObject>
    <label>job posting site</label>
    <nameField>
        <displayFormat>jobsite-{0000}</displayFormat>
        <label>job posting site Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>job posting sites</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>