force-app/main/default/objects/job_posting_site__c/fields/job_site_name__c.field-meta.xml
<CustomField>
    <fullName>job_site_name__c</fullName>
    <label>job site name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>