force-app/main/default/objects/job_posting_site__c/fields/status__c.field-meta.xml
<CustomField>
    <fullName>status__c</fullName>
    <label>status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>-active</fullName>
            </value>
            <value>
                <fullName>-inactive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>