force-app/main/default/objects/job_posting_site__c/fields/technical_site__c.field-meta.xml
<CustomField>
    <fullName>technical_site__c</fullName>
    <defaultValue>false</defaultValue>
    <label>technical site</label>
    <type>Checkbox</type>
</CustomField>